Ajout Javadoc et nettoyagede code